[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/fonts/dogica/OTF/dogicapixel.otf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/equipment.gd" type="Script" id=2]
[ext_resource path="res://assets/music/menu_music.mp3" type="AudioStream" id=3]
[ext_resource path="res://assets/music/purchase.wav" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[node name="equipment" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1080.0
margin_bottom = 1580.0
color = Color( 0.239216, 0.121569, 0.0705882, 1 )

[node name="powerup1" type="Button" parent="."]
margin_left = 128.0
margin_top = 264.0
margin_right = 543.0
margin_bottom = 392.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = SubResource( 1 )
text = "SPONGES: $35"

[node name="sponge_amounts" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -372.0
margin_top = 558.0
margin_right = 8.0
margin_bottom = 608.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = SubResource( 2 )
text = "Currently: 0"
align = 1

[node name="powerup2" type="Button" parent="."]
margin_left = 128.0
margin_top = 712.0
margin_right = 543.0
margin_bottom = 840.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = SubResource( 1 )
text = "FIRST AID: $45"

[node name="first_aid_amounts" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -375.0
margin_top = 1022.0
margin_right = 5.0
margin_bottom = 1072.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = SubResource( 2 )
text = "Currently: 0"
align = 1

[node name="back" type="Button" parent="."]
margin_left = 128.0
margin_top = 1152.0
margin_right = 543.0
margin_bottom = 1280.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = SubResource( 1 )
text = "BACK"

[node name="wallet" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -339.0
margin_top = 26.0
margin_right = -172.0
margin_bottom = 76.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = SubResource( 2 )
text = "$0"
align = 1

[node name="menu_music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="purchase_made" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="pressed" from="powerup1" to="." method="_on_powerup1_pressed"]
[connection signal="pressed" from="powerup2" to="." method="_on_powerup2_pressed"]
[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
